# OpenGL-Playground

./: CMakeLists.txt  README.md
src/: main.cpp  shader.hpp  shader_program.hpp  triangle.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
